# ompi

./: .gitignore  configure.ac
config/: opal_check_cuda.m4  opal_check_cudart.m4  opal_check_gccjit.m4  opal_check_nvcc.m4  opal_config_files.m4
docs/man-openmpi/man3/: MPI_Init_thread.3.rst
ompi/communicator/: comm_init.c  communicator.h
ompi/debuggers/: predefined_gap_test.c
ompi/group/: group.c  group_plist.c
ompi/include/ompi/: memchecker.h
ompi/instance/: instance.c
ompi/mca/bml/: bml.h
ompi/mca/coll/adapt/: Makefile.am  coll_adapt.h  coll_adapt_algorithms.h  coll_adapt_allreduce.c  coll_adapt_alltoallv.c  coll_adapt_bcast.c  coll_adapt_component.c  coll_adapt_context.c  coll_adapt_op.h  (+13 more)
ompi/mpi/c/: pack.c  start.c  startall.c
ompi/request/: req_test.c  req_wait.c  request.c  request.h
ompi/runtime/: ompi_mpi_init.c
opal/datatype/: Makefile.am  opal_convertor.c  opal_convertor.h  opal_convertor_raw.c  opal_copy_functions_heterogeneous.c  opal_datatype.h  opal_datatype_copy.c  opal_datatype_copy.h  opal_datatype_create.c  opal_datatype_cuda.c  opal_datatype_destroy.c  opal_datatype_module.c  opal_datatype_optimize.c  opal_datatype_pack.c  opal_datatype_pack.h  opal_datatype_prototypes.h  opal_datatype_unpack.c  opal_datatype_unpack.h
opal/datatype/cuda/: Makefile.am  opal_datatype_pack_cuda_wrapper.cu  opal_datatype_unpack_cuda_wrapper.cu
opal/include/opal/: opal_gpu.h
opal/mca/accelerator/: accelerator.h
opal/mca/btl/: btl.h
test/datatype/: Makefile.am  ddt_lib.c  ddt_lib.h  ddt_test.c  ddt_test_cuda.c  opal_datatype_test.c  to_self.c
(+149 files in other folders)
